[package]
name = "tab_viewer"
publish = false
version = "0.0.0"
description = "Fun notation view - tab viewer"

edition = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[lib]

[features]
default = [
    "bevy/bevy_gltf",
    "bevy/bevy_winit",
    "bevy/bevy_render",
    "bevy/png",
    "bevy/wayland",
]

native = [
    "clap",
    "bevy/x11",
]

midi = [
    "notation_midi",
]

dsl = [
    "notation_dsl",
]

with_egui = [
    "notation_bevy_utils/with_egui",
]

[dependencies]
notation_bevy_utils = { workspace = true }

notation_model = { workspace = true }

notation_midi = { workspace = true, optional = true }
notation_dsl = { workspace = true, optional = true }

serde = { workspace = true }
serde_arrays = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
ron = { workspace = true }
float_eq = { workspace = true }

bevy = { workspace = true }

rand = { workspace = true }
getrandom = { workspace = true }

bevy_prototype_lyon = { workspace = true }
bevy_easings = { workspace = true }

bevy_asset_loader = { workspace = true }

rfd = { workspace = true }
lazy_static = { workspace = true }
unic-langid = { workspace = true }

clap = { workspace = true, optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { workspace = true }
console_error_panic_hook = { workspace = true }
gloo-events = { workspace = true }
futures = { workspace = true }
web-sys = { workspace = true }
