[package]
name = "tab_viewer"
publish = false
version = "0.0.0"
description = "Fun notation view - tab viewer"

edition = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[lib]

[features]
default = [
    "edger_bevy/view",
    "edger_bevy/shape",
    "edger_bevy/assets",
]

native = [
    "clap",
    "edger_bevy/native",
]

web = [
    "edger_bevy/web",
]

midi = [
    "notation_midi",
]

dsl = [
    "notation_dsl",
]

with_egui = [
    "edger_bevy/egui",
]

[dependencies]
edger_bevy = { workspace = true }

notation_model = { workspace = true }

notation_midi = { workspace = true, optional = true }
notation_dsl = { workspace = true, optional = true }

serde = { workspace = true }
serde_arrays = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
ron = { workspace = true }
float_eq = { workspace = true }

rand = { workspace = true }
getrandom = { workspace = true }

bevy = { workspace = true }
bevy_easings = { workspace = true }

bevy_asset_loader = { workspace = true }

rfd = { workspace = true }
lazy_static = { workspace = true }
unic-langid = { workspace = true }

clap = { workspace = true, optional = true }

# https://github.com/bevyengine/bevy/issues/11964
bitflags = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { workspace = true }
console_error_panic_hook = { workspace = true }
gloo-events = { workspace = true }
futures = { workspace = true }
web-sys = { workspace = true }
